<resources>
    <string name="app_name">Workout Log</string>
    <string name="prijava">Prijava</string>
    <string name="registracija">Registracija</string>
    <string name="unesiteKorisnickoIme">Unesite Email adresu</string>
    <string name="unesiteLozinku">Unesite lozinku</string>
    <string name="ponovnounesiteLozinku">Ponovno unesite lozinku</string>
    <string name="nemateKorRac">Nemate korisnički račun?</string>
    <string name="registrirajSe">Registrirajte se</string>
    <string name="imatekorisnickiracun">Imate korisnički račun?</string>
    <string name="noviTrening">Novi trening</string>
    <string name="prijedloziTreninga">Prijedlozi treninga</string>
    <string name="Zdravlje">Povijest treninga</string>
    <string name="Odjava">Odjava</string>
    <string name="Unesitesvapolja">Unesite sva polja!</string>
    <string name="Unesitejednakelozinke">Unesite jednake lozinke!</string>
    <string name="UnesiteispravnuEmailadresu">Unesite ispravnu Email adresu!</string>
    <string name="UnesiteLozinkuOd6Znakova">Lozinka mora imati najmanje 6 znakova!</string>
    <string name="VecPostojiKorisnikSTomEmailAdresom">Već postoji korisnik s tom Email adresom!</string>
    <string name="PogresnoUneseniPodatci">Ne postoji korisnik s unesenim podatcima!</string>
    <string name="SpremljeniTreninzi">Spremljeni predlošci</string>
    <string name="Dodajnoviprijedlogtreninga">Dodaj novi prijedlog treninga</string>
    <string name="DodajVjezbu">Dodaj Vježbu</string>
    <string name="SpremiVjezbu">Spremi Vježbu</string>
    <string name="UnesiImeVjezbe">Unesite ime vježbe</string>
    <string name="BrojPonavljanja">Broj ponavljanja</string>
    <string name="ImePredlozka">Naziv</string>
    <string name="UnesiTemplateIme">Unesite naziv</string>
    <string name="DodajBaremJednuVjezbu">Dodajte barem jednu vježbu!</string>
    <string name="uspjesnoSpremljenPredlozak">Uspješno spremljeno!</string>
    <string name="uspjesnoAzuriranPredlozak">Uspješno ažurirano!</string>
    <string name="neuspjesnoSpremljenPredlozak">Pogreška prilikom spremanja!</string>
    <string name="ImePredloskaVecPostojI">Naziv se već koristi!</string>
    <string name="RadnaKilaza">Radna kilaža</string>
    <string name="DodajSeriju">Dodaj seriju</string>
    <string name="UkupanBrojSerija">Ukupan broj serija:</string>
    <string name="UnesiteVrijednostiZaSvakuSeriju">Unesite vrijednosti za svaku seriju!</string>
    <string name="ShowBrojPonavljanja">Broj ponavljanja: </string>
    <string name="ShowTezina">Težina: </string>
    <string name="tezinaKg">kg</string>
    <string name="Serije">Serije:</string>
    <string name="SpremiTemplate">Spremi</string>
    <string name="ImeVjezbe">Ime vježbe:</string>
    <string name="Obrisi">Obriši</string>
    <string name="Odbaci">Odbaci</string>
    <string name="Odustani">Odustani</string>
    <string name="JesteLiSigurniDaZeliteObrisatiVjezbu">Jeste li sigurni da želite obrisati?</string>
    <string name="JesteLiSigurniDaZeliteObrisatiTemplate">Jeste li sigurni da želite odbaciti promjene?</string>
    <string name="infoovjezbidialog1">Pritisnite na ikonu: </string>
    <string name="infoovjezbidialog2">kako bi ste uredili zapis. </string>
    <string name="infoovjezbidialog3">Držite dodir na imenu kako bi ste obrisali zapis.</string>
    <string name="uspjesnaAktualizacijaBaze">Predložak je uspješno ažuriran!</string>
    <string name="neuspjesnaAktualizacijaBaze">Greška prilikom ažuriranja predloška!</string>
    <string name="uspjesnoBrisanjeTemplate">Uspješno ste obrisali zapis!</string>
    <string name="neuspjesnoBrisanjeTemplate">Neuspješno ste obrisali zapis!</string>
    <string name="zapocniNoviTrening">Započni novi trening</string>
    <string name="koristiPredlozak">Koristi predložak</string>
    <string name="odaberiPRedlozak">Odaberite jedan predložak:</string>
    <string name="ZavrsiTrening">Završi trening</string>
    <string name="SazetakTreninga">Sažetak treninga</string>
    <string name="UkupnoPodignuto">Ukupno podignuto kilaže:</string>
    <string name="UkupnoPodignutoVj">Vježba s najviše podignute kilaže:</string>
    <string name="UkupnoPonavljanja">Ukupno ponavljanja: </string>
    <string name="UkupnoPonavljanjaVj">Vježba s najviše ponavljanja: </string>
    <string name="ZatvoriSazetak">Zatvori sažetak</string>
    <string name="TreninziNaDan">Treninzi na dan: </string>
    <string name="NemaTreningaZaPrikaz">Nema treninga za prikaz</string>
    <string name="Povratak">Povratak</string>
    <string name="KakoBiSteSortiraliTreninge">kako bi ste sortirali treninge po datumu.</string>
    <string name="PretraziTreninge">Pretraži treninge</string>
    <string name="ProjeniProfilnu">Promjeni profilnu sliku</string>
    <string name="UrediProfil">Uredi profil</string>
    <string name="Slikaj">Snimi fotografiju</string>
    <string name="Pozdrav">Pozdrav </string>
    <string name="Ime">Ime</string>
    <string name="Prezime">Prezime </string>
    <string name="Lozinka">Lozinka </string>
    <string name="Email">E-mail</string>
    <string name="Postaviteprofil">Postavite profil</string>
    <string name="Odaberiteprofilnusliku">Odaberite profilnu sliku</string>
    <string name="PostaviProfil">Postavi profil</string>
    <string name="KorisnikVecImaProfil">Korisnik već ima profil!</string>
    <string name="UnesiIme">Unesite ime</string>
    <string name="UnesiPrezime">Unesite prezime</string>
    <string name="DodajteBaremJednuSeriju">Dodajte barem jednu seriju!</string>
    <string name="ResetLozinke">Pošalji mail za promjenu lozinke</string>
    <string name="ResetEmailSucces">Email za resetiranje lozinke uspješno poslan!</string>
    <string name="ResetEmailFail">Unesite ispravan e-mail</string>
    <string name="ZaboravljenaLozinka">Zaboravljena lozinka</string>
    <string name="UnesiteEmailZaReset">Unesite E-mail adresu na koju želite poslati E-mail za resetiranje lozinke.</string>
    <string name="Posalji">Pošalji</string>
    <string name="UnesiteEmail">Unesite E-mail</string>
    <string name="NemaSpremljenihPredlozaka">Nema spremljenih predložaka</string>
    <string name="UnesiPasswordemial">Unesite email i lozinku!</string>



</resources>