<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/custom_dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/JesteLiSigurniDaZeliteObrisatiVjezbu"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/alertOdustaniVj"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/Odustani"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/alertObrisiVj"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/Obrisi"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>
