<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/custom_dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:backgroundTint="@color/gold"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnOdaberiPredlozak"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/koristiPredlozak"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnOdaberiNoviTrening"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/noviTrening"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnOdustaniOdabir"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/Odustani"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>
