<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/custom_dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cardBackgroundColor="@color/black"
        app:strokeColor="@color/gold"
        app:strokeWidth="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/JesteLiSigurniDaZeliteObrisatiTemplate"
                android:textColor="@color/gold"
                android:textSize="18sp" />

            <Button
                android:id="@+id/alertOdustaniTemplate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gold"
                android:text="@string/Odustani"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/alertObrisiTemplate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/Odbaci" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
