<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/custom_dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/UnesiteEmailZaReset"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:prefixTextColor="@color/black"
            app:suffixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOdustaniReset"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/Odustani"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnPosaljiReset"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gold"
                android:text="@string/Posalji"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
