<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UrediProfilActivity">

    <ImageView
        android:id="@+id/ivBackUredi"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_dangerous_24"
        app:tint="@color/red" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxStrokeColor="@color/gold"
        app:counterTextColor="@color/white"
        app:cursorColor="@color/gold"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edImeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Ime"  android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:boxStrokeColor="@color/gold"
        app:counterTextColor="@color/white"
        app:cursorColor="@color/gold"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:suffixTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrezimeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Prezime"  android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"  app:boxStrokeColor="@color/gold"
            app:counterTextColor="@color/white"
            app:cursorColor="@color/gold"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="@color/white"
            app:suffixTextColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" app:boxStrokeColor="@color/gold"
        app:counterTextColor="@color/white"
        app:cursorColor="@color/gold"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/UrediProfil"
        android:textColor="@color/gold"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSpremiP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/gold"
        android:text="@string/SpremiTemplate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLozinkaP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ResetLozinke"
        android:textColor="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>